[Suraj] : Refactor supplier-service - add validation, mapper, and supplier exception handling